plugins {
  id 'java'
  id 'java-library'
  id 'jacoco'
  id 'maven'
}

group 'com.github.hmcts'
version 'DEV-SNAPSHOT'

sourceCompatibility = 11
targetCompatibility = 11

repositories {
  mavenCentral()
  mavenLocal()
  maven { url 'https://jitpack.io' }
  jcenter()
}

task highLevelDataSetup(type: JavaExec) {
  main = "uk.gov.hmcts.reform.civil.HighLevelDataSetupApp"
  classpath += sourceSets.main.runtimeClasspath
  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
}

dependencies {
  implementation group: 'com.github.hmcts', name: 'befta-fw', version: '8.7.6'
  implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.3'

  testCompile group: 'junit', name: 'junit', version: 4.12
  testCompile 'pl.pragmatists:JUnitParams:1.1.1'
}
